# images_service

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  import_data.py  main.py  pyproject.toml  pytest.ini  readme.md  settings.py
alembic/: env.py
alembic/versions/: 29-09-2024_init.py
app/api/: endpoints.py
app/dao/: frame.py
app/image_processing/: formatting.py  import_data.py
app/repository/: abc.py  sql_repository.py
app/resource/: database.py
app/schema/: input.py  output.py
app/service/: frame_service.py
app/sqlmodel/: models.py
tests/: conftest.py  test_api.py  test_dataset.csv  test_image_processor.py  test_import_data.py  test_service.py  test_sqlrepository.py
