[tool.poetry]
name = "image-service"
version = "0.1.0"
description = ""
authors = ["arkadii <arkasha90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
opencv-python = "^4.10.0.84"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
httpx = "^0.27.2"
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

# Activate all the rules that are pyupgrade-related
lint.extend-select = [
    "I",
    "UP",    # pyupgrade
    "C401",  # flake8-comprehensions: unnecessary-generator-set
    "C402",  # flake8-comprehensions: unnecessary-generator-dict
    "C403",  # flake8-comprehensions: unnecessary-list-comprehension-set
    "C404",  # flake8-comprehensions: unnecessary-list-comprehension-dict
    "C405",  # flake8-comprehensions: unnecessary-literal-set
    "F632",  # pyflakes: is-literal
    "W605",  # pycodestyle: invalid-escape-sequence
]

[tool.ruff.format]
quote-style = "double"